Fix BarChartTable popover padding right if no scrollbar is shown

--- a/pyrene-graphs/src/components/BarChartTable/barChartTable.css
+++ b/pyrene-graphs/src/components/BarChartTable/barChartTable.css
@@ -48,6 +48,11 @@
   bottom: 24px;
   top: 56px; /* 24px padding + 32px Popover header */
   left: 24px;
+  right: 24px;
+  overflow-y: hidden;
+}
+
+.popOverTableWithScrollbar {
   right: 0px; /* padding is applied seperately because of the scrollbar */
   padding-right: 10px;
   overflow-y: auto;
